2003-11-18  Werner Koch  <wk@gnupg.org>

	* random.h (rndw32_set_dll_name): Removed unused prototype.

	* Makefile.am (EXTRA_DIST): Added Manifest.

2003-11-11  Werner Koch  <wk@gnupg.org>

	* Manifest: New.

2003-11-04  Werner Koch  <wk@gnupg.org>

	* md.c (gcry_md_hash_buffer): Use shortcut for SHA1
	* sha1.c (_gcry_sha1_hash_buffer): New.

	* random.c: Reformatted most functions.
	(mix_pool): Moved the failsafe_digest from global
	scope to here.
	(do_fast_random_poll): Use the generic fucntions even if a fast
	gathering function has been used.
	(read_pool): Detect a fork and retry.
	(gcry_randomize, get_random_bytes): Don't distinguish anymore
	between weak and strong random.
	(gcry_create_nonce): New.

2003-10-31  Werner Koch  <wk@gnupg.org>

	* rndw32.c (slow_gatherer_windowsNT): Use a plain buffer for the
	disk performance values and not the W32 API structure.

	* dsa.c (verify): s/exp/ex/ due to shadowing of a builtin.
	* elgamal.c (verify): Ditto.

	* ac.c (gcry_ac_data_get_index): s/index/idx/
	(gcry_ac_data_copy_internal): Remove the cast in _gcry_malloc.
	(gcry_ac_data_add): Must use gcry_realloc instead of realloc.
	* pubkey.c (sexp_elements_extract): s/index/idx/ as tribute to the
	forehackers.
	(gcry_pk_encrypt): Removed shadowed definition of I. Reordered
	arguments to malloc for clarity.
	(gcry_pk_sign, gcry_pk_genkey): Ditto.
	* primegen.c (prime_generate_internal): s/random/randomlevel/.

2003-10-27  Moritz Schulte  <mo@g10code.com>

	* pubkey.c (gcry_pk_encrypt): Don't forget to deallocate pkey.

2003-10-27  Werner Koch  <wk@gnupg.org>

	* random.c (gcry_random_add_bytes): Return if buflen is zero to
	avoid gcc warning about unsed parameter.
	(MASK_LEVEL): Simplified; does now work for signed and unsigned
	w/o warnings.

	* md.c (md_start_debug): Removed the const from SUFFIX, because
	this function is called from the control fucntion which does not
	require const.

	Prefixed all (pubkey,digest,cipher}_spec_* globale variables with
	_gcry_.
