@@ -46,8 +46,7 @@ md4.c
 md5.c
 rijndael.c
 rmd160.c
-rsa.c
-serpent.c
+rsa.c serpent.c
 sha1.c
 sha256.c
 sha512.c
